--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
                 <p>Grilled Indian cottage cheese marinated with spices.</p>
             </div>
             <div class="menu-item">
-                <img src="static/Butter-Chicken.jpg" alt="">
+                <img src="Butter-Chicken.jpg" alt="">
                 <h3>Butter Chicken</h3>
                 <p>Juicy chicken cooked in rich, creamy tomato gravy.</p>
             </div>
             <div class="menu-item">
-                <img src="static/Litti Chokha.jpg" alt="">
+                <img src="Litti Chokha.jpg" alt="">
                 <h3>Litti Choka</h3>
                 <p>Sattu-and-spice-stuffed whole wheat balls.</p>
             </div>
             <div class="menu-item">
-                <img src="static/Daal Rice.jpg" alt="">
+                <img src="Daal Rice.jpg" alt="">
                 <h3>Daal Rice</h3>
                 <p>hearty and wholesome meal.</p>
             </div>
